--- a/app/src/main/resources/templates/all-readers.html
+++ b/app/src/main/resources/templates/all-readers.html
@@ -17,6 +17,10 @@
                     <h5>All readers</h5>
                 </div>
                 <div class="card-body">
+                    <div class="alert alert-danger" role="alert" th:if="${forbidden}">
+                        <strong>Error:</strong>
+                        <span>Reader can't be deleted due to he/she still has borrowed books.</span>
+                    </div>
                     <div class="alert alert-warning" role="alert" th:if="${!found}">
                         <strong>Warning:</strong>
                         <span>No readers have been found.</span>
@@ -36,7 +40,7 @@
                                 <td th:text="${item.email}"></td>
                                 <td>
                                     <div th:replace="~{fragments/button :: button-update}"></div>
-                                    <div th:replace="~{fragments/button :: button-delete}"></div>
+                                    <div th:replace="~{fragments/button :: button-delete(pageLink='/reader/delete',identifier='readerId')}"></div>
                                 </td>
                             </tr>
                             </tbody>
