--- a/app/src/main/resources/templates/fragments/button.html
+++ b/app/src/main/resources/templates/fragments/button.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<a th:fragment="button-delete" th:href="@{/delete(bookId=${item.id})}"
+<a th:fragment="button-delete(pageLink, identifier)" th:href="@{${pageLink}(${identifier}=${item.id})}"
    class="btn btn-danger btn-sm"
    onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
     Delete
