Refactor book api

--- a/app/src/main/resources/templates/all-books.html
+++ b/app/src/main/resources/templates/all-books.html
@@ -45,8 +45,8 @@
                                     data-bs-placement="right" title="Available"></td>
                                 <td class="table-success" th:if="${!item.borrowed}"
                                     sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <div th:replace="~{fragments/button :: button-update(pageLink='/updateBook', identifier='bookId')}"></div>
-                                    <div th:replace="~{fragments/button :: button-delete(pageLink='/delete', identifier='bookId')}"></div>
+                                    <div th:replace="~{fragments/button :: button-update(pageLink='/book/show-update', identifier='bookId')}"></div>
+                                    <div th:replace="~{fragments/button :: button-delete(pageLink='/book/delete', identifier='bookId')}"></div>
                                 </td>
                                 <td class="table-danger" th:if="${item.borrowed}" th:text="${item.name}"
                                     data-bs-toggle="tooltip"
@@ -56,13 +56,13 @@
                                     data-bs-placement="right" title="Borrowed"></td>
                                 <td class="table-danger" th:if="${item.borrowed}"
                                     sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <div th:replace="~{fragments/button :: button-update(pageLink='/updateBook', identifier='bookId')}"></div>
-                                    <div th:replace="~{fragments/button :: button-delete(pageLink='/delete', identifier='bookId')}"></div>
+                                    <div th:replace="~{fragments/button :: button-update(pageLink='/book/show-update', identifier='bookId')}"></div>
+                                    <div th:replace="~{fragments/button :: button-delete(pageLink='/book/delete', identifier='bookId')}"></div>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
-                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/books')}"></div>
+                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/book/all')}"></div>
                     </div>
                 </div>
             </div>
