--- a/app/src/main/resources/templates/available-books.html
+++ b/app/src/main/resources/templates/available-books.html
@@ -36,13 +36,13 @@
                                 <td th:text="${item.name}"></td>
                                 <td th:text="${item.author}"></td>
                                 <td sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <a th:href="@{/borrowBook(bookId=${item.id})}"
+                                    <a th:href="@{/book/show-borrow(bookId=${item.id})}"
                                        class="btn btn-info btn-sm">Borrow</a>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
-                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/available')}"></div>
+                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/book/available')}"></div>
                     </div>
                 </div>
             </div>
