feat: Add connection to a database with Amazon RDS (#80)
* Introduce DatabaseApp

* Extend ServiceApp

* Use SecretValue#unsafeUnwrap

* Use String#formatted

* Introduce Reader

* Introduce LibraryTestApplication

* Rename BookRepository

* Rename BookFileRepository

* Rename main entity class

* Introduce DatabaseApp

* Extend ServiceApp

* Use SecretValue#unsafeUnwrap

* Use String#formatted

* Add Reader entity

* Introduce LibraryTestApplication

* Rename BookRepository

* Rename BookFileRepository

* Rename main entity class

* Apply code formatting

* Add Book Entity

* Introduce BorrowedBook entity

* Rewrite DB init script

* Introduce BaseRepositoryTest

* Extend reader entity

* Finalize ReaderRepositoryTest

* Add DDl for reader initialization

* Add BookRepositoryTest

* Add BorrowedBookRepository

* Make BaseRepositoryTest generic

* Improve BorrowedBookRepositoryTest#testFindAll

* Add BorrowedBookRepositoryTest#testAvailableBooks

* Use pagination

* Rename BookService to BookFileService

* Create BookService bean

* Start BookService implementation

* Introduce Query Projections

* Extend BookService

* Refactor BookServiceTest

* Introduce BookService#availBook

* Validate the DDL schema

* Refactor controllers

* Fix BookRestControllerTest

* Fix BookServiceTest

* Rework BookControllerTest

* Fix BookControllerTest

* Introduce books page

* Reintroduce index page

* Initialize database on application's start up

* Remove database initialization on application's start up

* Simplify test db initialization

* Populate database for dev profile

* Introduce BorrowedBookDto#readerName

* Introduce ReaderDto

* Remove BookMapper

* Use separate dto package

* Remove obsolete persistence classes

* Remove obsolete dto and entity classes

* Switch to correct BorrowedDto

* Fix failing test

* Change borrow-book

* Fix book borrowing


--- a/app/src/main/resources/templates/borrow-book.html
+++ b/app/src/main/resources/templates/borrow-book.html
@@ -17,30 +17,20 @@
                     <h5>Borrow book</h5>
                 </div>
                 <div class="card-body">
-                    <form class="row g-2" th:method="POST" th:object="${borrowedDto}" th:action="@{/borrow}">
+                    <form class="row g-2" th:method="POST" th:object="${borrowedDto}" th:action="@{/book/borrow}">
                         <input type="hidden" th:field="*{bookId}"/>
                         <div class="col-12">
-                            <input id="firstName" class="form-control" type="text" placeholder="First name"
-                                   aria-label="First name" aria-describedby="firstNameHelp"
-                                   th:field="*{firstName}"
-                                   th:classappend="${#fields.hasErrors('firstName')}? 'is-invalid'">
-                            <div>
-                                <small id="firstNameHelp" class="form-text text-muted">
-                                    Client's first name.
-                                </small>
-                            </div>
+                            <label class="form-check-label" for="readerSelect">
+                                Select reader
+                            </label>
+                            <select class="form-select" id="readerSelect" th:field="*{readerId}">
+                                <option th:each="item : ${readers}" th:value="${item.id}" th:text="${item.toString()}"></option>
+                            </select>
                         </div>
                         <div class="col-12">
-                            <input id="lastName" class="form-control" type="text" placeholder="Last name"
-                                   aria-label="Last name" aria-describedby="lastNameHelp" th:field="*{lastName}"
-                                   th:classappend="${#fields.hasErrors('lastName')}? 'is-invalid'">
-                            <div>
-                                <small id="lastNameHelp" class="form-text text-muted">
-                                    Client's last name.
-                                </small>
-                            </div>
-                        </div>
-                        <div>
+                            <label class="form-check-label" for="readerSelect">
+                                Choose date of borrow
+                            </label>
                             <input id="fromDate" class="form-control" type="date"
                                    aria-label="Date of borrow" aria-describedby="fromDateHelp" th:field="*{from}"
                                    th:classappend="${#fields.hasErrors('from')}? 'is-invalid'">
