--- a/app/src/main/resources/templates/borrowed-books.html
+++ b/app/src/main/resources/templates/borrowed-books.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <div class="alert alert-warning" role="alert" th:if="${!found}">
                         <strong>Warning:</strong>
-                        <span>No available books have been found.</span>
+                        <span>No borrowed books have been found.</span>
                     </div>
                     <div th:if="${found}">
                         <table aria-label="Borrowed books" class="table table-striped">
@@ -37,10 +37,10 @@
                             <tr th:each="item : ${books.content}">
                                 <td th:text="${item.name}"></td>
                                 <td th:text="${item.author}"></td>
-                                <td th:text="${item.borrowedTo}"></td>
+                                <td th:text="${item.readerName()}"></td>
                                 <td th:text="${item.borrowedOn}"></td>
                                 <td sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <a th:href="@{/avail(bookId=${item.id})}"
+                                    <a th:href="@{/book/avail(bookId=${item.id})}"
                                        class="btn btn-info btn-sm"
                                        onclick="if (!(confirm('Are you sure you want to return this book?'))) return false">
                                         Return
@@ -49,7 +49,7 @@
                             </tr>
                             </tbody>
                         </table>
-                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/borrowed')}"></div>
+                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/book/borrowed')}"></div>
                     </div>
                 </div>
             </div>
