--- a/app/src/main/resources/templates/fragments/button.html
+++ b/app/src/main/resources/templates/fragments/button.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<a th:fragment="button-delete" th:href="@{/delete(bookId=${item.id})}"
+<a th:fragment="button-delete(pageLink, identifier)" th:href="@{${pageLink}(${identifier}=${item.id})}"
    class="btn btn-danger btn-sm"
-   onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
+   onclick="if (!(confirm('Are you sure you want to delete this item?'))) return false">
     Delete
 </a>
-<a th:fragment="button-update" th:href="@{/updateBook(bookId=${item.id})}" class="btn btn-info btn-sm">Update</a>
+<a th:fragment="button-update(pageLink, identifier)" th:href="@{${pageLink}(${identifier}=${item.id})}"
+   class="btn btn-info btn-sm">Update</a>
 </html>
