--- a/app/src/main/resources/templates/fragments/navigation.html
+++ b/app/src/main/resources/templates/fragments/navigation.html
@@ -5,21 +5,25 @@
 <nav aria-label="Page navigation" th:fragment="pagination-nav(pageLink)" th:if="${pageNumbers.size() > 1}">
     <ul class="pagination justify-content-center">
         <li class="page-item" th:each="pageNumber : ${pageNumbers}">
-            <a class="page-link" th:href="@{${pageLink}(page=${pageNumber - 1})}" th:text=${pageNumber}></a>
+            <a class="page-link" th:href="@{${pageLink}(page=${pageNumber - 1})}" th:text="${pageNumber}"></a>
         </li>
     </ul>
 </nav>
 <div th:fragment="toggle-pane" class="col-md-2">
     <div class="card">
         <div class="list-group list-group-flush">
-            <a id="allBooksButton" class="list-group-item list-group-item-action" th:href="@{/}">Show all
+            <a id="allBooksButton" class="list-group-item list-group-item-action" th:href="@{/book/all}">Show all
                 books</a>
             <a id="availableBooksButton" class="list-group-item list-group-item-action"
-               th:href="@{/available}">Show available books</a>
+               th:href="@{/book/available}">Show available books</a>
             <a id="borrowedBooksButton" class="list-group-item list-group-item-action"
-               th:href="@{/borrowed}">Show borrowed books</a>
+               th:href="@{/book/borrowed}">Show borrowed books</a>
             <a id="addBookButton" class="list-group-item list-group-item-action"
-               th:href="@{/addBook}" sec:authorize="hasRole('ROLE_ADMIN')">Add new book</a>
+               th:href="@{/book/show-add}" sec:authorize="hasRole('ROLE_ADMIN')">Add new book</a>
+            <a id="readersButton" class="list-group-item list-group-item-action"
+               th:href="@{/reader/all}" sec:authorize="hasRole('ROLE_ADMIN')">Show readers</a>
+            <a id="addReaderButton" class="list-group-item list-group-item-action"
+               th:href="@{/reader/show-add}" sec:authorize="hasRole('ROLE_ADMIN')">Add new reader</a>
         </div>
     </div>
 </div>
