--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -10,55 +10,20 @@
 </head>
 <body>
 <section layout:fragment="basic-content">
-    <div class="row">
-        <div th:replace="~{fragments/navigation :: toggle-pane}"></div>
-        <div class="col-sm-10">
+    <div class="row d-flex justify-content-center">
+        <div class="col-sm-4">
             <div class="card">
-                <div class="card-header">
-                    <h5>All books</h5>
-                </div>
                 <div class="card-body">
-                    <div class="alert alert-warning" role="alert" th:if="${!found}">
-                        <strong>Warning:</strong>
-                        <span>No books have been found.</span>
+                    <div th:if="${param.error}">
+                        <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
                     </div>
-                    <div th:if="${found}">
-                        <table aria-label="All books" class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Author</th>
-                                <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')">Action</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="item : ${books.content}">
-                                <td class="table-success" th:if="${!item.borrowed}" th:text="${item.name}"
-                                    data-bs-toggle="tooltip"
-                                    data-bs-placement="right" title="Available"></td>
-                                <td class="table-success" th:if="${!item.borrowed}" th:text="${item.author}"
-                                    data-bs-toggle="tooltip"
-                                    data-bs-placement="right" title="Available"></td>
-                                <td class="table-success" th:if="${!item.borrowed}"
-                                    sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <div th:replace="~{fragments/button :: button-update}"></div>
-                                    <div th:replace="~{fragments/button :: button-delete}"></div>
-                                </td>
-                                <td class="table-danger" th:if="${item.borrowed}" th:text="${item.name}"
-                                    data-bs-toggle="tooltip"
-                                    data-bs-placement="right" title="Borrowed"></td>
-                                <td class="table-danger" th:if="${item.borrowed}" th:text="${item.author}"
-                                    data-bs-toggle="tooltip"
-                                    data-bs-placement="right" title="Borrowed"></td>
-                                <td class="table-danger" th:if="${item.borrowed}"
-                                    sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <div th:replace="~{fragments/button :: button-update}"></div>
-                                    <div th:replace="~{fragments/button :: button-delete}"></div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/')}"></div>
+                    <div th:if="${param.logout}">
+                        <p class="text-warning">You have been signed out.</p>
+                    </div>
+                    <div th:if="${message}" th:text="${message}" th:class="${'alert alert-' + messageType}"
+                         role="alert"></div>
+                    <div class="alert alert-info" role="alert" sec:authorize="isAnonymous()">
+                        <span>Seems like you are not signed-in yet. Please sign in or sign up first to see list of books.</span>
                     </div>
                 </div>
             </div>
