--- a/app/src/main/resources/templates/borrowed-books.html
+++ b/app/src/main/resources/templates/borrowed-books.html
@@ -51,11 +51,11 @@
                                                 data-bs-toggle="dropdown" aria-expanded="false">Offer
                                         </button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <span class="dropdown-item" th:if="${item.offered.isEmpty()}">
+                                            <span class="dropdown-item" th:if="${item.candidates.isEmpty()}">
                                                 No one to offer</span>
                                             <form th:method="POST"
-                                                  th:each="reader : ${item.offered}">
-<!--                                                  th:action="#">-->
+                                                  th:each="reader : ${item.candidates}"
+                                                  th:acon="@{/book/{bookId}/recommendations/{readerId}(bookId=${item.id}, readerId=${reader.id})}">
                                                 <button
                                                         th:text="${reader.readerName()}"
                                                         type="submit"
