--- a/app/src/main/resources/templates/borrowed-books.html
+++ b/app/src/main/resources/templates/borrowed-books.html
@@ -30,7 +30,7 @@
                                 <th scope="col">Author</th>
                                 <th scope="col">Borrowed to</th>
                                 <th scope="col">Borrowed on</th>
-                                <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')">Action</th>
+                                <th scope="col">Action</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -39,12 +39,32 @@
                                 <td th:text="${item.author}"></td>
                                 <td th:text="${item.readerName()}"></td>
                                 <td th:text="${item.borrowedOn}"></td>
-                                <td sec:authorize="hasRole('ROLE_ADMIN')">
-                                    <a th:href="@{/book/avail(bookId=${item.id})}"
+                                <td>
+                                    <a sec:authorize="hasRole('ROLE_ADMIN')"
+                                       th:href="@{/book/avail(bookId=${item.id})}"
                                        class="btn btn-info btn-sm"
                                        onclick="if (!(confirm('Are you sure you want to return this book?'))) return false">
                                         Return
                                     </a>
+                                    <div class="dropdown d-inline-block">
+                                        <button class="btn btn-warning dropdown-toggle" type="button"
+                                                data-bs-toggle="dropdown" aria-expanded="false">Offer
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                            <span class="dropdown-item" th:if="${item.candidates.isEmpty()}">
+                                                No one to offer</span>
+                                            <form th:method="POST"
+                                                  th:each="reader : ${item.candidates}"
+                                                  th:action="@{/book/{bookId}/recommend/{readerId}(bookId=${item.id}, readerId=${reader.id})}">
+                                                <button
+                                                        th:text="${reader.readerName()}"
+                                                        type="submit"
+                                                        name="submit"
+                                                        class="dropdown-item">
+                                                </button>
+                                            </form>
+                                        </div>
+                                    </div>
                                 </td>
                             </tr>
                             </tbody>
